# firecore

./: .gitignore  Cargo.toml  README.md
crates/ethcore/: Cargo.toml
crates/ethcore/blockchain/: Cargo.toml
crates/ethcore/blockchain/src/: generator.rs  lib.rs
crates/ethcore/types/: Cargo.toml
crates/ethcore/types/src/: block.rs  header.rs  lib.rs
crates/ethcore/types/src/transaction/: mod.rs  transaction.rs
docs/: firecore.excalidraw
examples/: README.md
src/: main.rs
src/core/: block.rs  blockchain.rs  mod.rs  transaction.rs
tests/: main.rs
