[package]
edition = "2021"
name = "core"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2 = "0.9.2"
common-types = {path = "crates/ethcore/types"}
ethcore-blockchain = { path = "crates/ethcore/blockchain" }

# [lib]
# path = "src/lib.rs"

[[bin]]
name = "fire"
path = "src/main.rs"

[workspace]
members = ["crates/ethcore/types"]
